--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@
     <div class="container">
  	    <div class="button-group">
     <button class="print-button" onclick="handlePrint()">🖨️ In Phiếu Kiểm Tra</button>
-    <button class="tire-form-button" onclick="window.location.href='phieu_kiem_tra_lop.html'">📄 Phiếu Kiểm Tra Lốp</button>
+    <button class="tire-form-button" onclick="window.location.href='https://longvt89.github.io/phieukiemtra/phieu_kiem_tra_lop.html'">📄 Phiếu Kiểm Tra Lốp</button>
     <button class="tire-form-button" id="submitToSheet">📤 Gửi Thông Tin</button>
 </div>    
         <div class="form-content">
