--- a/phieu_kiem_tra_lop.html
+++ b/phieu_kiem_tra_lop.html
@@ -517,7 +517,7 @@
                 </div>
                 <label style="margin-top: 10px; display: block;">Khuyến cáo lốp dự phòng:</label>
                 <div class="recommendation-checkboxes" style="display: flex; flex-wrap: wrap; gap: 10px;">
-                    <label><input type="checkbox" data-rec-id="can-chinh-thuoc-lai"> Cần chỉnh thuộc lái</label>
+                    <label><input type="checkbox" data-rec-id="can-chinh-thuoc-lai"> Cần chỉnh thước lái</label>
                     <label><input type="checkbox" data-rec-id="can-bang-dong"> Cân bằng động</label>
                     <label><input type="checkbox" data-rec-id="dao-lop"> Đảo lốp</label>
                     <label><input type="checkbox" data-rec-id="thay-the"> Thay thế</label>
