--- a/phieu_kiem_tra_lop.html
+++ b/phieu_kiem_tra_lop.html
@@ -528,6 +528,7 @@
         <!-- Phần điều khiển (nút bấm) -->
         <div class="controls">
             <div class="buttons">
+                <button class="tire-form-button" onclick="window.location.href='https://longvt89.github.io/phieukiemtra'">📄 Phiếu Kiểm Tra Xe</button>
                 <button class="btn btn-primary" onclick="updatePreview()">Cập nhật xem trước</button>
                 <button class="btn btn-success" onclick="printForm()">In phiếu (A5)</button>
             </div>
