--- a/phieu_kiem_tra_lop.html
+++ b/phieu_kiem_tra_lop.html
@@ -440,8 +440,8 @@
             
             <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px; margin-bottom: 20px;">
                 <div class="control-group">
-                    <label>Hiện trạng lốp:</label>
-                    <input type="text" id="tireCondition" placeholder="Nhập hiện trạng lốp">
+                    <label>Size lốp và hiện trạng lốp:</label>
+                    <input type="text" id="tireCondition" placeholder="Nhập size lốp và hiện trạng lốp">
                 </div>
                 <div class="control-group">
                     <label>Ngày:</label>
