--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
         .tire-form-button {
             background: #28a745;
             color: white;
-            padding: 8px 5px;
+            padding: 5px 5px;
             border: none;
             border-radius: 5px;
             cursor: pointer;
@@ -609,6 +609,7 @@
         <div class="button-group">
             <button class="print-button" onclick="handlePrint()">🖨️ In Phiếu Kiểm Tra</button>
             <button class="tire-form-button" onclick="window.location.href='https://longvt89.github.io/phieukiemtra/phieu_kiem_tra_lop.html'">📄 Phiếu Kiểm Tra Lốp</button>
+            <button class="tire-form-button" onclick="window.location.href='https://longvt89.github.io/phieukiemtra/phieutragam.html'">📄 Phiếu Kiểm Gầm</button>
             <button class="tire-form-button" id="submitToSheet">📤 Gửi Thông Tin</button>
         </div>
         <div class="form-content">
