--- a/kiemtragam.html
+++ b/kiemtragam.html
@@ -320,6 +320,9 @@
     <a href="#" onclick="window.location.href='https://longvt89.github.io/phieukiemtra'"; return false;" class="bg-purple-500 hover:bg-purple-700 text-white font-bold py-2 px-4 rounded transition duration-300 ease-in-out">
       Phiếu Kiểm Tra An Toàn Xe
     </a>
+    <a href="#" onclick="window.location.href='https://longvt89.github.io/phieukiemtra/phieu_kiem_tra_lop.html'"; return false;" class="bg-purple-500 hover:bg-purple-700 text-white font-bold py-2 px-4 rounded transition duration-300 ease-in-out">
+      Phiếu Kiểm Tra Lốp
+    </a>
   </div>
 
   
