--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
                             </div>
                             <div>
                                 <label for="customerEmail">E-mail:</label>
-                                <input type="email" id="customerEmail" name="email" class="info-input phone-email-input">
+                                <input type="email" id="customerEmail" name="email" class="info-input phone-email-input" placeholder="Điền 123@123">
                             </div>
                         </div>
                         <div class="info-group">
