--- a/phieu_kiem_tra_lop.html
+++ b/phieu_kiem_tra_lop.html
@@ -202,7 +202,7 @@
                 <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 15px; margin-bottom: 15px;">
                     <div class="control-group">
                         <label for="tireOverallConditionInput">Hiện trạng lốp:</label>
-                        <input type="text" id="tireOverallConditionInput" name="tireOverallCondition" placeholder="Nhập hiện trạng lốp">
+                        <input type="text" id="tireOverallConditionInput" name="tireOverallCondition" placeholder="Nhập hiện trạng lốp và báo giá lốp nếu có">
                     </div>
                     <div class="control-group">
                         <label for="inspectionDateInput">Ngày:</label>
