--- a/index.html
+++ b/index.html
@@ -898,7 +898,7 @@
                         </tr>
                         <tr>
                             <td>02</td>
-                            <td class="hang-muc"><input type="text" class="hang-muc-input" name="item_hangMuc_2" value="Vận"></td>
+                            <td class="hang-muc"><input type="text" class="hang-muc-input" name="item_hangMuc_2" value="Van"></td>
                             <td><input type="text" class="dien-giai-input" name="item_dienGiai_2"></td>
                             <td><input type="number" step="any" class="sl-input" name="item_soLuong_2" oninput="calculateRowTotal(this)"></td>
                             <td><input type="number" step="any" class="don-gia-input" name="item_donGia_2" oninput="calculateRowTotal(this)"></td>
